--- a/contato.html
+++ b/contato.html
@@ -3,7 +3,7 @@
     <head>
         <title> Contato </title>
         <link rel="stylesheet" href="contato.css">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;900&display=swap" rel="stylesheet">
     </head>
 
     <body>
@@ -15,29 +15,29 @@
 
          <form action="/savepoint" method="POST">
  
-              <div class="field">
-                        <label for="nome"> NOME </label> 
+              <div class="name">
+                        <label for="text"> NOME: </label> 
                         <input type="text" id="nome" name="name" required="required">
               </div>
 
-              <div class="field">
-                        <label for="email"> EMAIL </label> 
-                        <input  type="e-mail" id="email" name="email" required="required" placeholder="bacon2020@gmail.com" >
+              <div class="email">
+                        <label for="email"> EMAIL: </label> 
+                        <input  type="e-mail" id="email" name="email" required="required" >
               </div>
 
 
-              <div class="field">
-                        <label for="assunto"> ASSUNTO </label> 
+              <div class="assunto">
+                        <label for="text"> ASSUNTO: </label> 
                         <input type="text" id="assunto" name="assunto" required="required">
               </div>
 
-              <div class="field">
-                        <label for="text"> MENSAGEM </label> 
-                        <textarea  name="mensage" id="mensagem" required="required" > </textarea> 
+              <div class="mensage">
+                        <label for="text"> MENSAGEM: </label> 
+                        <input type="text" id="mensage" name="mensage" required="required">
               </div>
 
  
-              <button type="submit"> ENVIAR </button> 
+              <center> <button type="submit"> ENVIAR </button>  </center>
 
           </form>
             
