Elaborado um unico codigo

--- a/html/contato.html
+++ b/html/contato.html
@@ -8,7 +8,8 @@
 
     <body>
 
-         <section>
+    <div class="contact">
+        <section>
                 <h2 class="name-section">CONTATO</h2>
                 <p class="description">ENTRE EM CONTATO CONOSCO</p>
         </section>
@@ -40,7 +41,7 @@
               <center> <button type="submit"> ENVIAR </button>  </center>
 
           </form>
-            
+    </div>     
 
     </body>
 
