modificacao css, contato e equipe

--- a/equipe.html
+++ b/equipe.html
@@ -7,48 +7,48 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet"> 
 	</head>
 	<body>
-	            <div class="equipe">
-                <h2> <center> EQUIPE </center> </h2>
-                <h3> <center> CONHEÇA NOSSO TIME </center> </h3>
-            </div>
-
-            <div class="pessoa01">
-                <img src="equip-1.jpg">
-                <h1> Eduarda Martins </h1>
-                <h2> Diretora Geral  </h2>
-            </div>
-
-            <div class="pessoa02">
-                <center> <img src="equip-2.jpg"> 
-                <h1> Alana Freitas  </h3>
-                <h2> Diretora de Marketing </h2> </center>
-            </div>
-
-            <div class="pessoa03">
-                <img src="equip-3.jpg">
-                <h1> Carlos Andrade  </h3>
-                <h2> CEO </h2>
-            </div>
-
-            <div class="pessoa04">
-                <img src="equip-4.jpg">
-                <h1> Luana Castell  </h3>
-                <h2> SEO </h2>
-            </div>
-
-            <div class="pessoa05">
-                <center> <img src="equip-5.jpg"> 
-                <h1> Mathias Fernandes  </h3>
-                <h2> Gerente de Projetos </h2> </center>
-            </div>
-
-            <div class="pessoa06">
-                <img src="equip-6.jpg">
-                <h1> Gabriel Silva </h3>
-                <h2> Coordernador de Vendas </h2>
+        <div class="team">
+	        <section class="equipe">
+                <h2> Equipe </h2>
+                <p> Conheça nosso time </p>
+            </section>
+            
+            <div class="card">
+                <div>
+                    <div class="persona">
+                        <img src="equip-1.jpg">
+                        <p class="name"> Eduarda Martins </p>
+                        <p class="charge"> Diretora Geral  </p>
+                    </div>
+                    <div class="persona">
+                        <img src="equip-2.jpg"> 
+                        <p class ="name"> Alana Freitas  </p>
+                        <p class="charge"> Diretora de Marketing </p>
+                    </div>
+                    <div class="persona">
+                        <img src="equip-5.jpg"> 
+                        <p class="name"> Mathias Fernandes  </p>
+                        <p class="charge"> Gerente de Projetos </p> 
+                    </div>
+                </div>
+                <div>
+                    <div class="persona">
+                        <img src="equip-3.jpg">
+                        <p class="name"> Carlos Andrade  </p>
+                        <p class="charge"> CEO </p>
+                    </div>
+                    <div class="persona">
+                        <img src="equip-4.jpg">
+                        <p class="name"> Luana Castell  </p>
+                        <p class="charge"> SEO </p>
+                    </div>
+                    <div class="persona">
+                        <img src="equip-6.jpg">
+                        <p class="name"> Gabriel Silva </p>
+                        <p class="charge"> Coordernador de Vendas </p>
+                    </div>
+                </div>
             </div>
         </div>
-    
-    </header>
 	</body>
 </html>
