--- a/origin.html
+++ b/origin.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../css/equipe.css"> 
     <link rel="stylesheet" href="../css/contato.css">
     <link rel="stylesheet" href="../css/map.css"> --> 
-    <link rel="stylesheet" href="../css/origin.css">
+    <link rel="stylesheet" href="../CSS/origin.css">
     <link rel="stylesheet" href="../images">
 
 
