--- a/origin.html
+++ b/origin.html
@@ -22,10 +22,10 @@
 
             <h2>ORIGIN</h2>
             <nav>
-                <a href="#link1">HOME</a>
+                <a href="#home">HOME</a>
                 <a href="#sobre">SOBRE NÓS</a>
-                <a href="#link3">SERVIÇOS</a>
-                <a href="#link4">EQUIPE</a>
+                <a href="#servicos">SERVIÇOS</a>
+                <a href="#equipe">EQUIPE</a>
                 <a href="#contato">CONTATO</a>
 
             </nav>
@@ -40,11 +40,11 @@
                 </label>
 
                 <div id="myDropdown" class="dropdown-child">
-                    <a href="#link1">HOME</a>
+                    <a href="#home">HOME</a>
                     <a href="#sobre">SOBRE NÓS</a>
-                    <a href="#link3">SERVIÇOS</a>
-                    <a href="#link4">EQUIPE</a>
-                    <a href="#link5">CONTATO</a>
+                    <a href="#servicos">SERVIÇOS</a>
+                    <a href="#equipe">EQUIPE</a>
+                    <a href="#contato">CONTATO</a>
                 </div>
 
             </div>
@@ -74,7 +74,7 @@
 
             <div class="main">
                 <h1>ORIGIN</h1>
-                <h2> WE WORK HARD, WE RESULT PERFECT</h2>
+                <h2>WE WORK HARD, WE RESULT PERFECT</h2>
                 <div class="button">
                     <button>Veja Mais</button>
                 </div>
@@ -117,7 +117,7 @@
         </div>
 
         <!--Serviços-->
-        <div class="service">
+        <div class="service" id="servicos">
             <div>
                 <h2 class="name-section">Serviços</h2>
                 <p class="description">Veja como podemos te ajudar</p>
@@ -154,7 +154,7 @@
         </div>
 
         <!--Equipe-->
-        <div class="team">
+        <div class="team" id="equipe">
             <section class="equipe">
                 <h2> Equipe </h2>
                 <p> Conheça nosso time </p>
@@ -258,10 +258,10 @@
             </div>
             <div>
                 <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Sobre Nós</a></li>
-                    <li><a href="#">Serviços</a></li>
-                    <li><a href="#">Equipe</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#sobre">Sobre Nós</a></li>
+                    <li><a href="#servicos">Serviços</a></li>
+                    <li><a href="#equipe">Equipe</a></li>
                     <li><a href="#contato">Contato</a></li>
                 </ul>
             </div>
