--- a/origin.html
+++ b/origin.html
@@ -8,6 +8,9 @@
 
     <link rel="stylesheet" href="../CSS/origin.css">
     <link rel="stylesheet" href="../CSS/768x850/origin.css">
+    <link rel="stylesheet" href="../CSS/360x640/responsive.css">
+    <link rel="stylesheet" href="../CSS/640x360/origin.css">
+
     <link rel="stylesheet" href="../images">
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;900&display=swap" rel="stylesheet">
@@ -161,43 +164,37 @@
             </section>
 
             <div class="card">
-                <div>
-                    <div class="persona">
-                        <img src="images/equip-1.jpg" alt="Eduardo Martins">
-                        <p class="name"> Eduarda Martins </p>
-                        <p class="charge"> Diretora Geral </p>
-                    </div>
-                    <div class="persona">
-                        <img src="images/equip-2.jpg" alt="Alana Freitas">
-                        <p class="name"> Alana Freitas </p>
-                        <p class="charge"> Diretora de Marketing </p>
-                    </div>
-                    <div class="persona">
-                        <img src="images/equip-3.jpg" alt="Carlos Andrade">
-                        <p class="name"> Carlos Andrade </p>
-                        <p class="charge"> CEO </p>
-                    </div>
+                <div class="persona">
+                    <img src="images/equip-1.jpg" alt="Eduardo Martins">
+                    <p class="name"> Eduarda Martins </p>
+                    <p class="charge"> Diretora Geral </p>
+                </div>
+                <div class="persona">
+                    <img src="images/equip-2.jpg" alt="Alana Freitas">
+                    <p class="name"> Alana Freitas </p>
+                    <p class="charge"> Diretora de Marketing </p>
+                </div>
+                <div class="persona">
+                    <img src="images/equip-3.jpg" alt="Carlos Andrade">
+                    <p class="name"> Carlos Andrade </p>
+                    <p class="charge"> CEO </p>
+                </div>
+                <div class="persona">
+                    <img src="images/equip-4.jpg" alt="Luana Castell">
+                    <p class="name"> Luana Castell </p>
+                    <p class="charge"> SEO </p>
                 </div>
 
-                <div>
-                    <div class="persona">
-                        <img src="images/equip-4.jpg" alt="Luana Castell">
-                        <p class="name"> Luana Castell </p>
-                        <p class="charge"> SEO </p>
-                    </div>
+                <div class="persona">
+                    <img src="images/equip-5.jpg" alt="Luana Castell">
+                    <p class="name"> Mathias Fernandes</p>
+                    <p class="charge"> Gerente de projetos </p>
+                </div>
 
-                    <div class="persona">
-                        <img src="images/equip-5.jpg" alt="Luana Castell">
-                        <p class="name"> Mathias Fernandes</p>
-                        <p class="charge"> Gerente de projetos </p>
-                    </div>
-
-                    <div class="persona">
-                        <img src="images/equip-6.jpg" alt="Gabriel Silva">
-                        <p class="name"> Gabriel Silva </p>
-                        <p class="charge"> Coordernador de Vendas </p>
-                    </div>
-
+                <div class="persona">
+                    <img src="images/equip-6.jpg" alt="Gabriel Silva">
+                    <p class="name"> Gabriel Silva </p>
+                    <p class="charge"> Coordernador de Vendas </p>
                 </div>
 
             </div>
