links abrindo em nova aba

--- a/origin.html
+++ b/origin.html
@@ -62,15 +62,15 @@
 
             <div class="logo">
 
-                <a href="https://br.linkedin.com/">
+                <a target="_blank" rel="noopener noreferrer" href="https://br.linkedin.com/">
                     <img src="images/linkedin.png" alt="LINKEDIN">
                 </a>
 
-                <a href="https://www.instagram.com/?hl=pt-br">
+                <a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/?hl=pt-br">
                     <img src="images/instagram.png" alt="INSTAGRAM">
                 </a>
 
-                <a href="https://www.facebook.com/">
+                <a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/">
                     <img src="images/facebook.png" alt="FACEBOOK">
                 </a>
             </div>
@@ -79,7 +79,7 @@
                 <h1>ORIGIN</h1>
                 <h2>WE WORK HARD, WE RESULT PERFECT</h2>
                 <div class="button">
-                    <button>Veja Mais</button>
+                    <button onclick="window.open('http://voluta.ufop.br/','_blank');" type="button">Veja Mais</button>
                 </div>
             </div>
 
