ajustes finais e limpeza no codigo

--- a/origin.html
+++ b/origin.html
@@ -7,9 +7,10 @@
     </title>
 
     <link rel="stylesheet" href="../CSS/origin.css">
-    <link rel="stylesheet" href="../CSS/768x850/origin.css">
+    <link rel="stylesheet" href="../CSS/768x850/responsive.css">
     <link rel="stylesheet" href="../CSS/360x640/responsive.css">
-    <link rel="stylesheet" href="../CSS/640x360/origin.css">
+    <link rel="stylesheet" href="../CSS/640x360/responsive.css">
+    <link rel="stylesheet" href="../CSS/1366x768/responsive.css">
 
     <link rel="stylesheet" href="../images">
 
