--- a/origin.html
+++ b/origin.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="../CSS/768x850/responsive.css">
     <link rel="stylesheet" href="../CSS/360x640/responsive.css">
     <link rel="stylesheet" href="../CSS/640x360/responsive.css">
-    <link rel="stylesheet" href="../CSS/1366x768/responsive.css">
 
     <link rel="stylesheet" href="../images">
 
@@ -20,7 +19,7 @@
 <body>
 
     <!--Inicio-->
-    <header>
+    <header id="home">
 
         <div class="menu">
 
@@ -52,22 +51,22 @@
                 </div>
 
             </div>
-            
+
         </div>
 
         <div class=principal>
 
             <div class="logo">
 
-                <a target="_blank" rel="noopener noreferrer" href="https://br.linkedin.com/">
+                <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/company/voluta-sd/">
                     <img src="images/linkedin.png" alt="LINKEDIN">
                 </a>
 
-                <a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/?hl=pt-br">
+                <a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/volutaej/">
                     <img src="images/instagram.png" alt="INSTAGRAM">
                 </a>
 
-                <a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/">
+                <a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/VolutaEJ/">
                     <img src="images/facebook.png" alt="FACEBOOK">
                 </a>
             </div>
@@ -122,7 +121,7 @@
                 <h2 class="name-section">Serviços</h2>
                 <p class="description">Veja como podemos te ajudar</p>
             </div>
-            <div>
+            <div class="card-container">
                 <div class="card">
                     <div class="subtitle">
                         <p>Criação de Logo</p>
@@ -236,7 +235,7 @@
         <!--Maps-->
         <div class="maps">
             <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d387190.2799160891!2d-74.25987584510595!3d40.69767006338158!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNova%20Iorque%2C%20NY%2C%20EUA!5e0!3m2!1spt-BR!2sbr!4v1596048429710!5m2!1spt-BR!2sbr"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3739.685586086282!2d-43.51181088507791!3d-20.39584958634467!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xa40aee8b676805%3A0xfdca8ec7c03164a9!2sVoluta%20Solu%C3%A7%C3%B5es%20Digitais!5e0!3m2!1sen!2sbr!4v1596506559666!5m2!1sen!2sbr"
                 width="100%" height="350" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
                 tabindex="0">
             </iframe>
@@ -252,7 +251,7 @@
             </div>
             <div>
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="#home">Home</a></li>
                     <li><a href="#sobre">Sobre Nós</a></li>
                     <li><a href="#servicos">Serviços</a></li>
                     <li><a href="#equipe">Equipe</a></li>
@@ -265,11 +264,26 @@
         </div>
     </footer>
 
+    <a href="#home" class="btn" id="myBtn"> <img src="./images/arrow_up.webp" class="imgbotao" alt=""></a>
+
 </body>
 
 <script>
     function hideMenu() {
         document.getElementById("checkbox-menu").checked = false;
+    }
+    //Get the button
+    var mybutton = document.getElementById("myBtn");
+
+    // When the user scrolls down 20px from the top of the document, show the button
+    window.onscroll = function () { scrollFunction() };
+
+    function scrollFunction() {
+        if (document.body.scrollTop > 60 || document.documentElement.scrollTop > 60) {
+            mybutton.style.display = "flex";
+        } else {
+            mybutton.style.display = "none";
+        }
     }
 </script>
 
