--- a/origin.html
+++ b/origin.html
@@ -6,12 +6,12 @@
         Origin
     </title>
 
-    <link rel="stylesheet" href="../CSS/origin.css">
-    <link rel="stylesheet" href="../CSS/768x850/responsive.css">
-    <link rel="stylesheet" href="../CSS/360x640/responsive.css">
-    <link rel="stylesheet" href="../CSS/640x360/responsive.css">
+    <link rel="stylesheet" href="./CSS/origin.css">
+    <link rel="stylesheet" href="./CSS/768x850/responsive.css">
+    <link rel="stylesheet" href="./CSS/360x640/responsive.css">
+    <link rel="stylesheet" href="./CSS/640x360/responsive.css">
 
-    <link rel="stylesheet" href="../images">
+    <link rel="stylesheet" href="./images">
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;900&display=swap" rel="stylesheet">
 </head>
